# KDE-Mankala-Manual-Setup

./: README.md  SETUP_WINDOWS.md
mankalaengine-master/: .clang-tidy  .flatpak-manifest.json  .flatpak-manifest.json.license  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  INSTALL.md  Messages.sh  README.md  REUSE.toml  org.kde.mankalaengine.metainfo.xml
mankalaengine-master/benchmark/: CMakeLists.txt  benchmark.cpp
mankalaengine-master/docs/: CMakeLists.txt  Doxyfile.in
mankalaengine-master/examples/: CMakeLists.txt  bohnespieltui.cpp  kalahtui.cpp  pallangulitui.cpp
mankalaengine-master/po/ar/: mankalaengine.po
mankalaengine-master/po/ca/: mankalaengine.po
mankalaengine-master/po/ca@valencia/: mankalaengine.po
mankalaengine-master/po/de/: mankalaengine.po
mankalaengine-master/po/es/: mankalaengine.po
mankalaengine-master/po/fr/: mankalaengine.po
mankalaengine-master/po/ga/: mankalaengine.po
mankalaengine-master/po/he/: mankalaengine.po
mankalaengine-master/po/it/: mankalaengine.po
mankalaengine-master/po/ka/: mankalaengine.po
mankalaengine-master/po/nl/: mankalaengine.po
mankalaengine-master/po/pt_BR/: mankalaengine.po
mankalaengine-master/po/sl/: mankalaengine.po
mankalaengine-master/po/tr/: mankalaengine.po
mankalaengine-master/po/uk/: mankalaengine.po
mankalaengine-master/po/zh_CN/: mankalaengine.po
mankalaengine-master/src/: CMakeLists.txt  bohnenspielrules.cpp  bohnenspielrules.h  kalahrules.cpp  kalahrules.h  mankalaengine.cpp  mankalaengine.h  moveselection.cpp  moveselection.h  owarerules.cpp  owarerules.h  pallangulirules.cpp  pallangulirules.h  rules.cpp  rules.h  variantdescriptions.h
mankalaengine-master/test/: CMakeLists.txt  TestBohnenspielRules.cpp  TestKalahRules.cpp  TestMankalaEngine.cpp  TestOwareRules.cpp  TestPallanguliRules.cpp
